fixed gray box on mobile menu dropdown

--- a/src/components/NavBar/styles.scss
+++ b/src/components/NavBar/styles.scss
@@ -36,10 +36,10 @@ body {
 }
 
 .overlay {
-  display: block;
-  height: 100vh;
-  transition: all 0.4s linear;
-  background: gray;
+  // display: block;
+  // height: 100vh;
+  // transition: all 0.4s linear;
+  // background: gray;
 
   a {
     // text-transform: uppercase;
